# hy127v5.11_PythonWebCcr

./: .claude.env.example  .gitignore  AI模型-最新.md  AI模型.md  Code880_Web_Python编程辅助工作台优化方案.md  Hy127_Web_Python编程辅助工作台优化方案.md  Hy127_Web_Python编程辅助工作台优化方案_复核修复清单.md  Sub-agent_CCR_Web端开箱即用技术方案.md  Sub-agent_CCR_Web端开箱即用方案.md  Sub-agent_CCR_多模型开箱即用技术方案.md  Sub-agent_CCR打包初始化自动生成开发技术方案.md  THIRD_PARTY_NOTICES.md  agent_role_binding.json  ai_models_config.json  ai_providers.py  git命令  init_log.txt  provider-runtime-compatibility-matrix-plan.md  pyproject.toml  一键安装说明.md  启动Web工作台.bat  启动Web工作台.ps1  火山方舟CodingPlan_多AI模型兼容改造方案.md  火山方舟CodingPlan_手工模型配置.md  重新初始化 V1.24.bat  重新初始化 V1.24.ps1
.claude_templates/: README.md
.claude_templates/agents/: architect.md  docs-writer.md  implementer.md  reviewer.md  tester.md
__hy127/: __init__.py  date_helper.py  dialogs.py  excel_template.py  init.bat  log_helper.py  pandas_helper.py  vba.py
code880web/: download_vendor.py  requirements.txt
hy127web/: download_vendor.py
package/: 一键安装.spec
scripts/: dev_check.py  dev_start_web.py  export_routes.py
src/: main.py  sub_agent_ccr_model_config.py  sub_agent_ccr_renderer.py  一键安装卸载.py  打包exe  v1.2.py
修改意见/: 修改意见.md
方案设计/: Hy127_Web_Python编程辅助工作台优化方案.md  LOCAL_MANUS_AI_WORKBENCH_PLAN_v2.md  WEB_VSCODE_RELEASE_COMPARISON.md  WEB_VS_VSCODE_COMPARISON.md  WEB端多项目稳定运行深化方案_20260428.md  WEB端点击运行Python文件实现方案_Claude版_v1.md  WEB端点击运行Python文件实现方案_v1.md  WEB端迁移方案.md  WEB端迁移方案_20260428_架构设计.md  WEB端迁移方案_多项目并行与稳定运行设计.md  WEB端迁移方案_最终整合版_v3.1.md  WEB端迁移方案_最终整合版_v3.md  WEB端迁移方案_最终整合版_v4.md
(+209 files in other folders)
