[project]
name = "code_2838"
version = "0.1.0"
description = "zgxpython_temp hy127.cn"
readme = "一键安装说明.md"
requires-python = ">=3.12.10,<3.14"
dependencies = [
    "arrow>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pyinstaller>=6.19.0",
    "pypinyin>=0.55.0",
    "pywin32>=311",
    "screeninfo>=0.8.1",
    "ttkbootstrap>=1.12",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pytest>=8.0",
    "websockets>=12.0",
    "mammoth>=1.7.0",
    "python-pptx>=0.6.23",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["hy127web/tests"]
